[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket-response = { version = "0.0.1-rc.2" }
chrono = { version = "0.4.19", features = ["serde"] }
sha2 = "0.10.2"
base16 = "0.2.1"
serde = "1.0.138"
serde_json = "1.0"